--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,13 @@
 {
   "manifest_version": 2,
   "name": "tokencv",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "复制浏览器网页的token，便于开发过程中token过期手动复制",
+  "icons": {
+    "128": "./icon/token.png"
+  },
   "browser_action": {
+    "default_icon": "./icon/token.png",
     "default_title": "tokencv",
     "default_popup": "./popup/dist/index.html"
   },
