--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "browser_action": {
     "default_icon": "./icon/token.png",
     "default_title": "tokencv",
-    "default_popup": "./popup/dist/index.html"
+    "default_popup": "./popup/index.html"
   },
   "background": {
     "scripts": ["./background/index.js"]
