--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "tokencv",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "复制浏览器网页的token，便于开发过程中token过期手动复制",
   "icons": {
     "128": "./icon/token.png"
@@ -17,7 +17,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["./content/copy.js"],
+      "js": ["./content/utils.js", "./content/cookie.js", "./content/index.js"],
       "run_at": "document_end"
     }
   ],
