--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,17 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "tokencv",
   "version": "1.1.5",
   "description": "复制浏览器网页的token，便于开发过程中token过期手动复制",
   "icons": {
     "128": "./icon/token.png"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "./icon/token.png",
-    "default_title": "tokencv",
-    "default_popup": "./popup/index.html"
+    "default_title": "tokencv"
   },
   "background": {
-    "scripts": ["./background/index.js"]
+    "service_worker": "./background/index.js"
   },
   "content_scripts": [
     {
