feat: 增加禁用功能

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,8 +8,7 @@
   },
   "action": {
     "default_icon": "./icon/token.png",
-    "default_title": "tokencv",
-    "default_popup": "./popup/index.html"
+    "default_title": "tokencv"
   },
   "background": {
     "service_worker": "./background/index.js"
