--- a/popup/package.json
+++ b/popup/package.json
@@ -2,19 +2,20 @@
   "name": "popue",
   "version": "0.0.0",
   "scripts": {
+    "dev": "vite",
     "serve": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@arco-design/web-react": "^2.24.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "antd": "^5.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.12",
     "@vitejs/plugin-react": "^1.0.0",
     "sass": "^1.43.4",
-    "vite": "^2.6.4"
+    "vite": "^4.1.4"
   }
 }
