--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "tokencv",
-  "version": "2.6.0",
-  "description": "复制浏览器网页的token，便于开发过程中token过期手动复制",
+  "version": "2.7.0",
+  "description": "Copying Cookies, LocalStorage, SessionStorage from One Website to Another Website",
   "icons": {
     "128": "./icon/token.png"
   },
