--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
-  "name": "tokencv",
-  "private": true,
-  "version": "2.6.1",
+  "name": "Storage Copy",
+  "version": "2.7.2",
+  "description": "Copying Cookies, LocalStorage, SessionStorage from One Website to Another Website",
   "type": "module",
+  "keywords": [
+    "storage",
+    "localStorage",
+    "sessionStorage",
+    "cookie"
+  ],
+  "license": "MIT",
+  "authors": {
+    "name": "Vgbire",
+    "email": "1053254202@qq.com"
+  },
+  "homepage": "https://github.com/Vgbire/storage-copy",
+  "repository": "https://github.com/Vgbire/storage-copy",
+  "bugs": "https://github.com/Vgbire/storage-copy/issues",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,6 +26,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.0",
     "antd": "^5.20.6",
+    "i18next": "^23.15.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
