--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Storage Copy",
-  "version": "2.7.2",
+  "version": "2.7.4",
   "description": "Copying Cookies, LocalStorage, SessionStorage from One Website to Another Website",
   "type": "module",
   "keywords": [
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.25",
     "@eslint/js": "^9.9.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@types/chrome": "^0.0.271",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
@@ -42,6 +43,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "prettier": "^3.3.3",
     "rollup": "^4.22.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
