--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Storage Copy",
-  "version": "2.7.4",
+  "version": "2.7.5",
   "description": "Copying Cookies, LocalStorage, SessionStorage from One Website to Another Website",
   "type": "module",
   "keywords": [
@@ -31,7 +31,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "2.0.0-beta.25",
+    "@crxjs/vite-plugin": "^2.0.0-beta.28",
     "@eslint/js": "^9.9.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@types/chrome": "^0.0.271",
